[BUGFIX] Remove gaps in tree of New Record Wizard
Replacing line breaks with a div allows styling to be applied to
each line in the tree.

Resolves: #53652
Releases: 6.2
Reviewed-on: https://review.typo3.org/25475
Tested-by: Wouter Wolters
Tested-by: Markus Klein
Tested-by: Georg Ringer

--- a/typo3/sysext/backend/Resources/Public/Css/visual/main_content.css
+++ b/typo3/sysext/backend/Resources/Public/Css/visual/main_content.css
@@ -26,3 +26,15 @@ span.t3-icon {
 	width:16px;
 	height:16px;
 }
+
+.typo3-newRecord-treeline {
+	padding-right: 20px;
+}
+
+.typo3-newRecord-treeline img {
+	vertical-align: middle;
+}
+
+#typo3-newRecord tr {
+	line-height: 13px;
+}
